        - Removed default pollution cost from calculation. Added a setting to customize pollution cost.
        - Add fuel consumption recipe for products
        - Fix list displays below search boxes. If necessary, they now scroll up until items are visible.
        - Fix the milestones display and the milestones editor displaying different milestones.
----------------------------------------------------------------------------------------------------------------------
Version: 0.6.4
Date: April 16th 2024
    Changes:
        - Tagged recipe-rows are now colored in the color of the tag.
        - Rows with errors are now more visible.
----------------------------------------------------------------------------------------------------------------------
Version: 0.6.3-RC2
Date: April 11th 2024
    Features:
        - Allow selecting multiple items with CTRL-click where it makes sense.
    Fixes:
        - YAFC no longer crashes with flib 0.14.
        - YAFC no longer crashes on a fresh install.
        - The Release Candidates (RC) bring confusion to versioning, so they are no longer used. 
          The next version after 0.6.3-RC2 will be 0.6.4.
----------------------------------------------------------------------------------------------------------------------
Version: 0.6.2
Date: March 2024
    Changes:
        - Add summary view
          - Checkbox to show only goods with 'issues': different consuming/producing amounts
          - Balance producing side to match the consuming when clicking an 'issue'
          - Support the search box (ctrl+F)
        - Fix text alignment of about screen
        - Fix width of 'Target technology for cost analysis' preference popup
        - Show actual overproduction with a magenta background color
        - Fix some typos
----------------------------------------------------------------------------------------------------------------------
Version: 0.6.1
Date: Feb 2024
    Changes: